Chatbot Color blue added to solve overlap of colors

--- a/src/components/Chatbot/style.css
+++ b/src/components/Chatbot/style.css
@@ -225,7 +225,7 @@ body{
   
   .bpw-widget-btn{
     border-radius: 50%;
-    background:#00bfa6;
+    background:blue;
   }
   
   .bpw-floating-button::before {
